<resources>
    <string name="app_name">Shell Connect and Win</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="shellpecten_alttext">Shell pecten</string>
    <string name="title_activity_rules">Rules</string>
    <string name="continuestring">Continue</string>
    <string name="rules1">In this daily sweepstake you will be answering questions about the Shell Oil Company and its 100+ year history.</string>
    <string name="rules2">The person who answers the most questions correctly wins.</string>
    <string name="rules3">You can participate in this sweepstake only once per day.</string>
    <string name="rules4">At the end of the quiz, you will be asked to provide some feedback to Shell, before you can submit your answers.</string>
    <string name="rules5">Winners will be contacted by email.</string>
    <string name="todaysprize">Today\'s prize:</string>
    <string name="debugprize">Fifteen (15) pints of debug oil</string>
    <string name="lastwinner">Last Winner</string>
    <string name="debugwinnername">John Doe</string>
    <string name="on">on</string>
    <string name="debugwinnertime">1st January 1970</string>
    <string name="title_activity_registration">Registration</string>
    <string name="register1">Please register before you start the game.</string>
    <string name="examplename">James Name</string>
    <string name="exampleemail">email@addre.ss</string>
    <string name="iaccepttos">I hereby accept the <u>Terms and Conditions</u>.</string>
    <string name="preference_file_key">nl.shell.arnoud.arnoudcustomerquiz.PREFERENCE_FILE_KEY</string>
    <string name="untickedtos_dialog_message">Please accept the Terms and Conditions to continue.</string>
    <string name="untickedtos_dialog_title">Unaccepted Terms and Conditions</string>
    <string name="saved_name">nl.shell.arnoud.SAVED_NAME_KEY</string>
    <string name="saved_email">nl.shell.arnoud.SAVED_EMAIL_KEY</string>
    <string name="shared_preferences">nl.shell.arnoud.SHARED_PREFERENCES_KEY</string>
    <string name="title_activity_main_functions_question">Question 1</string>
    <string name="question1text1">What are the main functions of the Shell Motorist app? You can select multiple.</string>
    <string name="question1option1">Loyalty information real-time</string>
    <string name="question1option2">Station finder</string>
    <string name="question1option3">To select fuel at a service station</string>
    <string name="question1option4">Product information</string>
    <string name="question1option5">Pay your invoice</string>
    <string name="title_activity_question_two">Question 2</string>
    <string name="question2text1">Watch this 20 second video, then select the correct answer below.</string>
    <string name="question2videopath">https://www.youtube.com/watch?v=JlWlnBWVQLE</string>
    <string name="title_activity_question_three">Question 3</string>
    <string name="question2option1">20+</string>
    <string name="question2option2">40+</string>
    <string name="question2option3">60+</string>
    <string name="fakeloadingindicator_text">A fake loading indicator</string>
    <string name="question3text1">What are Shell products today? You can select multiple.</string>
    <string name="title_activity_halfway">We need your help!</string>
    <string name="halfway1">You have done well in answering these tough questions.</string>
    <string name="halfway2">Before you can submit your answers, we would like to get your views and feedback on some of our current challenges.</string>
    <string name="title_activity_feedback_one">Challenge 1</string>
    <string name="feedback1text1">We are continuously trying to improve our products and services. What new products would you like to see at your local Shell service station?</string>
    <string name="country">Country</string>
    <string name="servicestation">Service Station</string>
    <string name="enterproductshere">Enter product(s) here</string>
    <string name="welcometoellipsis">Welcome to…</string>
    <string name="apptitle">Shell Connect and Win!</string>
    <string name="intro1">On this platform we learn from each other.</string>
    <string name="intro2">And you can win a prize daily!</string>
    <string name="handshake_description">An outstretched handshake</string>
    <string name="title_activity_feedback_two">Challenge 2</string>
    <string name="title_activity_feedback_three">Challenge 3</string>
    <string name="challenge3_title">Challenge 3</string>
    <string name="challenge3text1">Would you like to rate your local Shell station?</string>
    <string name="service_text">Service</string>
    <string name="shop_text">Shop</string>
    <string name="price_text">Price</string>
    <string name="skip_button">Skip</string>
    <string name="title_activity_feedback_four">Challenge 4</string>
    <string name="title_activity_feedback_five">Challenge 5</string>
    <string name="title_activity_end">Thank you!</string>
    <string name="end1">Thank you for your input! These could help improve our services and products for you.</string>
    <string name="end3">We will contact you by email in case you are today\'s winner.</string>
    <string name="end2">You can now submit your answers to us.</string>
    <string name="title_activity_referral">Thank you!</string>
</resources>
