<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.shell.arnoud.arnoudcustomerquiz.QuestionTwoActivity"
    android:background="@color/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:measureWithLargestChild="false"
        android:id="@+id/linearLayout5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView7"
            android:contentDescription="@string/shellpecten_alttext"
            android:src="@drawable/trimmed"
            android:layout_weight="70" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Question 2"
                android:id="@+id/textView28"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>

    <TextView android:text="@string/question2text1" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/loading"
        android:contentDescription="@string/fakeloadingindicator_text"
        android:layout_below="@+id/textView16"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuestring"
        android:id="@+id/button5"
        android:background="#002f6c"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="continueButton" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_above="@+id/button5">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2option1"
            android:id="@+id/radioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2option2"
            android:id="@+id/radioButton2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2option3"
            android:id="@+id/radioButton3"
            android:checked="false" />
    </RadioGroup>

</RelativeLayout>
