<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.shell.arnoud.arnoudcustomerquiz.FeedbackOneActivity"
    android:background="@color/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:measureWithLargestChild="false"
        android:id="@+id/linearLayout8" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView10"
            android:contentDescription="@string/shellpecten_alttext"
            android:src="@drawable/trimmed"
            android:layout_weight="70" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Challenge 1"
                android:id="@+id/textView20"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>

    <TextView android:text="@string/feedback1text1" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text20"
        android:layout_below="@+id/linearLayout8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/text20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/enterproductshere" />

    <MultiAutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multiAutoCompleteTextView"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/country" />

    <MultiAutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multiAutoCompleteTextView2"
        android:layout_below="@+id/multiAutoCompleteTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/servicestation" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuestring"
        android:id="@+id/button8"
        android:background="#002f6c"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="continueButton" />

</RelativeLayout>
